tests/my/bad/array003.lat
int main() {
  int a = "123".length,
      b = 1.length,
      c = true.length;
  return 0;
}
